+ added attendee cruds
