# app/Http/Requests/Attendee/UpdateAttendeeRequest.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Http\Requests\Attendee;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateAttendeeRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'name' => 'sometimes|required|string|max:255',
+            'email' => 'sometimes|required|email|unique:attendees,email',
+            'phone' => 'sometimes|nullable|string|max:20'
+        ];
+    }
+}
